--- a/html/css/main.css
+++ b/html/css/main.css
@@ -353,9 +353,10 @@ canvas.text-placement-mode {
     cursor: text !important; /* Force text cursor */
 }
 
-.canvas-tooltip {
+.canvas-title {
     display: none;
     text-align: center;
+    margin-bottom: 5px;
     color: var(--primary-color);
 }
 
